--- a/app.py/requirements.txt
+++ b/app.py/requirements.txt
@@ -1,10 +1,11 @@
-streamlit==1.28.0
-yfinance==0.2.33
-pandas==2.1.4
-numpy==1.24.3
-ta==0.10.2
-textblob==0.17.1
-plotly==5.18.0
-requests==2.31.0
-beautifulsoup4==4.12.2
-lxml==4.9.3
+streamlit
+yfinance
+pandas
+numpy
+ta
+textblob
+plotly
+requests
+beautifulsoup4
+lxml
+
